# libtorch-onnx-exporter

./: CMakeLists.txt  custom_onnx_exporter.cpp  onnx.proto3.pb.cc  onnx.proto3.pb.h  onnx_importer.cpp  serializer_for_onnx.cpp
